// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PlaylistForm/> createPlaylistAndAddTracks 1`] = `
<Form
  bsClass="form"
  componentClass="form"
  horizontal={false}
  inline={true}
>
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="success"
    disabled={false}
    id="start_sp_button"
    onClick={[Function]}
  >
    Start
  </Button>
  <FormGroup
    bsClass="form-group"
    controlId="play_list_name"
    style={
      Object {
        "margin": "1px 5px 5px 5px",
      }
    }
    validationState="success"
  >
    <InputGroup
      bsClass="input-group"
      style={
        Object {
          "maxWidth": 250,
        }
      }
    >
      <FormControl
        bsClass="form-control"
        componentClass="input"
        onChange={[Function]}
        placeholder="playlist name"
        type="text"
        value="test_list_zzzz"
      />
      <FormControlFeedback
        bsClass="form-control-feedback"
        bsRole="feedback"
      />
    </InputGroup>
  </FormGroup>
  <ButtonGroup
    block={false}
    bsClass="btn-group"
    justified={false}
    vertical={false}
  >
    <Button
      active={false}
      block={false}
      bsClass="btn"
      bsStyle="primary"
      disabled={false}
      id="genName_sp_button"
      onClick={[Function]}
    >
      gen. name
    </Button>
    <Button
      active={false}
      block={false}
      bsClass="btn"
      bsStyle="danger"
      disabled={false}
      id="crt_pl_button"
      onClick={[Function]}
    >
      <i
        className="fa fa-save"
      />
       Playlist
    </Button>
  </ButtonGroup>
  <label
    htmlFor="play_list_is_private"
  >
    <input
      checked={false}
      id="play_list_is_private"
      onChange={[Function]}
      type="checkbox"
      value="private"
    />
    private ?
  </label>
</Form>
`;

exports[`<PlaylistForm/> renders without crashing 1`] = `
<Form
  bsClass="form"
  componentClass="form"
  horizontal={false}
  inline={true}
>
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="success"
    disabled={false}
    id="start_sp_button"
    onClick={[Function]}
  >
    Start
  </Button>
  <FormGroup
    bsClass="form-group"
    controlId="play_list_name"
    style={
      Object {
        "margin": "1px 5px 5px 5px",
      }
    }
    validationState="error"
  >
    <InputGroup
      bsClass="input-group"
      style={
        Object {
          "maxWidth": 250,
        }
      }
    >
      <FormControl
        bsClass="form-control"
        componentClass="input"
        onChange={[Function]}
        placeholder="playlist name"
        type="text"
        value=""
      />
      <FormControlFeedback
        bsClass="form-control-feedback"
        bsRole="feedback"
      />
    </InputGroup>
  </FormGroup>
  <ButtonGroup
    block={false}
    bsClass="btn-group"
    justified={false}
    vertical={false}
  >
    <Button
      active={false}
      block={false}
      bsClass="btn"
      bsStyle="primary"
      disabled={false}
      id="genName_sp_button"
      onClick={[Function]}
    >
      gen. name
    </Button>
    <Button
      active={false}
      block={false}
      bsClass="btn"
      bsStyle="danger"
      disabled={true}
      id="crt_pl_button"
      onClick={[Function]}
    >
      <i
        className="fa fa-save"
      />
       Playlist
    </Button>
  </ButtonGroup>
  <label
    htmlFor="play_list_is_private"
  >
    <input
      checked={false}
      id="play_list_is_private"
      onChange={[Function]}
      type="checkbox"
      value="private"
    />
    private ?
  </label>
</Form>
`;

exports[`<PlaylistForm/> start_click 1`] = `
<Form
  bsClass="form"
  componentClass="form"
  horizontal={false}
  inline={true}
>
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="success"
    disabled={false}
    id="start_sp_button"
    onClick={[Function]}
  >
    Start
  </Button>
  <FormGroup
    bsClass="form-group"
    controlId="play_list_name"
    style={
      Object {
        "margin": "1px 5px 5px 5px",
      }
    }
    validationState="success"
  >
    <InputGroup
      bsClass="input-group"
      style={
        Object {
          "maxWidth": 250,
        }
      }
    >
      <FormControl
        bsClass="form-control"
        componentClass="input"
        onChange={[Function]}
        placeholder="playlist name"
        type="text"
        value="test_list_zzzz"
      />
      <FormControlFeedback
        bsClass="form-control-feedback"
        bsRole="feedback"
      />
    </InputGroup>
  </FormGroup>
  <ButtonGroup
    block={false}
    bsClass="btn-group"
    justified={false}
    vertical={false}
  >
    <Button
      active={false}
      block={false}
      bsClass="btn"
      bsStyle="primary"
      disabled={false}
      id="genName_sp_button"
      onClick={[Function]}
    >
      gen. name
    </Button>
    <Button
      active={false}
      block={false}
      bsClass="btn"
      bsStyle="danger"
      disabled={false}
      id="crt_pl_button"
      onClick={[Function]}
    >
      <i
        className="fa fa-save"
      />
       Playlist
    </Button>
  </ButtonGroup>
  <label
    htmlFor="play_list_is_private"
  >
    <input
      checked={false}
      id="play_list_is_private"
      onChange={[Function]}
      type="checkbox"
      value="private"
    />
    private ?
  </label>
</Form>
`;
